# nibbler

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  install.sh
.github/hooks/: pre-commit
.github/workflows/: cmake-single-platform.yml
nibbler/: CMakeLists.txt
nibbler/include/: literals.h
nibbler/include/game/: IMenu.h  Menu.h
nibbler/include/plugin/: IPlugin.h
nibbler/lib/: CMakeLists.txt
nibbler/lib/opengl-plugin/: CMakeLists.txt  PluginOpenGL.cpp  PluginOpenGL.h
nibbler/src/: CMakeLists.txt
nibbler/src/game/: App.cpp  App.h  Config.h
nibbler/src/game/logic/: StateMachine.cpp  StateMachine.h
nibbler/src/game/menu/: menu.h
nibbler/src/game/plugin/: Plugin.cpp  Plugin.h  PluginManager.cpp  PluginManager.h  exception.h
nibbler/src/game/snake/: Snake.cpp  Snake.h  exception.h
nibbler/src/game/state/: Context.cpp  Context.h  Event.cpp  Event.h
nibbler/src/game/state/impl/: ExitState.cpp  ExitState.h  MainMenuState.cpp  MainMenuState.h  PlayingState.cpp  PlayingState.h
nibbler/src/game/worker/: Worker.cpp  Worker.h
nibbler/src/main/: main.cpp
